name:                BinaryCookies
version:             0.1.0.0
synopsis:            OS X and iOS binarycookies parser
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           Copyright (C) 2015 Anthony Cowley
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.BinaryCookies
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       binary,
                       bytestring,
                       containers,
                       old-locale,
                       text >= 1.2 && < 1.3,
                       time,
                       transformers >= 0.4,
                       vector
  hs-source-dirs:      src
  default-language:    Haskell2010